--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Radix App for EDC 2018",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "test": "mocha"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
